# mock-mcp-server

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: __main__.py  auth.py  loader.py  mcp_server.py  validators.py
app/mock/: derived.py  engine.py  recipes.py
configs/: inventory-briefing.yaml  monthly-report.yaml  terravita-sop.yaml
docs/: FUTURE.md  README.md  auth.md  config-reference.md  derived.md  development.md  getting-started.md  ide-setup.md  pairing-with-forbin.md  recipes.md  strategies.md  validation.md
docs/examples/: inventory-briefing.md  monthly-report.md  terravita-sop.md
schemas/: mock-mcp-config.schema.json
tests/: conftest.py  test_configs.py  test_derived.py  test_e2e.py  test_engine.py  test_mcp_tools.py  test_recipes.py  test_validators.py
