[project]
name = "mock-mcp-server"
version = "2.0.0"
description = "Config-driven mock MCP server framework. Define endpoints + mock data in OAS YAML; run any profile by name."
requires-python = ">=3.13"
dependencies = [
    "faker>=40.15.0",
    "fastapi~=0.136.1",
    "httpx>=0.27",
    "mcp>=1.0",
    "pyyaml>=6.0.3",
    "uvicorn~=0.46.0",
]

[project.scripts]
mock-mcp = "app.__main__:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
