[project]
name = "mock-mcp-server"
version = "0.1.2"
description = "Config-driven mock MCP server framework. Define endpoints + mock data in OpenAPI 3.1 YAML profiles."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Chris Colinsky", email = "chris@lunarcommand.xyz" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "fastapi",
    "mock",
    "testing",
    "agentic",
    "ai-tools",
    "evaluation",
    "openapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "faker>=40.15.0",
    "fastapi~=0.136.1",
    "httpx>=0.27",
    "mcp>=1.0",
    "pyyaml>=6.0.3",
    "uvicorn~=0.46.0",
]

[project.urls]
Repository    = "https://github.com/chris-colinsky/mock-mcp-server"
Issues        = "https://github.com/chris-colinsky/mock-mcp-server/issues"
Documentation = "https://github.com/chris-colinsky/mock-mcp-server/blob/main/README.md"
Changelog     = "https://github.com/chris-colinsky/mock-mcp-server/blob/main/CHANGELOG.md"

[project.scripts]
mock-mcp = "app.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.1.0",
    "types-pyyaml>=6.0.12.20240917",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "configs"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501", # line-too-long handled by ruff-format
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
